# uvx-gh

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  tech_task.md
.github/workflows/: ci.yml  release.yml
cli_template/: __main__.py
cli_template/commands/: __init__.py  main.py
docs/decisions/: 0001-github-governance-baseline.md
docs/release/: pypi.md
docs/tech/: ci.md
tests/: main_test.py  uvx_gh_test.py
uvx_gh/: __main__.py  _cache.py  _git.py
uvx_gh/commands/: __init__.py  main.py
